# micro-flipper

./: .gitattributes  .gitignore  LICENSE  Manifest  README.md  config.yaml  pyproject.toml  setup.py
.github/workflows/: release.yml
apps/GPIO/: avr_isp.fap  esp32_wifi_marauder.fap  gpio_sentry_safe.fap  gps_nmea.fap  hc_sr04.fap  i2c_tools.fap  lightmeter.fap  nrf24_mouse_jacker.fap  nrf24_sniffer.fap  signal_generator.fap  spi_mem_manager.fap  swd_probe.fap  uart_terminal.fap  unitemp.fap
apps/Games/: blackjack.fap  doom.fap  minesweeper.fap  solitaire.fap
apps/Media/: metronome.fap  morse_code.fap  music_player.fap  wav_player.fap
apps/Misc/: hex_viewer.fap  hid_ble.fap  hid_usb.fap  text_viewer.fap  totp.fap
apps/NFC/: mfkey32.fap  mifare_nested.fap  picopass.fap
apps/Sub-GHz/: pocsag_pager.fap  protoview.fap  spectrum_analyzer.fap  subghz_bruteforcer.fap  subghz_playlist.fap  subrem_configurator.fap  weather_station.fap
apps/Tools/: bad_bt.fap  dtmf_dolphin.fap  fuzzer_ibtn.fap  fuzzer_rfid.fap  ir_scope.fap
badusb/: SpamRickrollPayload.txt
badusb/UNC0V3R3D-BadUSB/Windows_Badusb/PasswordStuff/ChromePasswords/: chrome_passwords_discord.txt
filpper-toolbox/: nfc_gen_wifi.py
micro-flipper/: setup.py
tools/: .flake8  empty_folders.txt  find_empty_dirs.sh  installer.sh
update/f7-update-unlshd-054/: backup.tar  firmware.dfu  resources.tar  update.fuf
